<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewx"
        tools:viewBindingIgnore="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:clipToPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:visibility="gone"
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/green3"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="June 27,2019"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewResponded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="TextView"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question" />

            <TextView
                android:id="@+id/question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="Q: How many times in the city of Dhaka the number of traffic congestion?"
                android:textColor="@color/black"
                android:textSize="20sp"
                style="@style/boldText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewResponded">

                <TextView
                    android:id="@+id/textViewStatistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:background="@color/dark_gray"
                    android:text="@string/v1_ureport_statistics"
                    style="@style/semiboldText"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <LinearLayout
                    android:background="@color/dark_gray"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"/>



                <TextView
                    android:id="@+id/textViewAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/v1_ureport_age"
                    style="@style/semiboldText"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <LinearLayout
                    android:background="@color/dark_gray"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/textViewGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/v1_ureport_gender"
                    style="@style/semiboldText"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
                <LinearLayout
                    android:background="@color/dark_gray"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/textViewlocations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/v1_ureport_location"
                    style="@style/semiboldText"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/textViewPieChart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/dark_gray"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/v1_ureport_keyword_text"
                    style="@style/semiboldText"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:visibility="gone" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                android:background="@drawable/poll_selector_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewResponded">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:visibility="invisible"
                    android:background="@color/dark_gray"
                    android:text="@string/v1_ureport_statistics"
                    style="@style/semiboldText"
                    android:textColor="@color/white"
                    android:textSize="14sp" />



                <TextView
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/v1_ureport_age"
                    style="@style/semiboldText"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/v1_ureport_gender"
                    style="@style/semiboldText"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/v1_ureport_location"
                    style="@style/semiboldText"
                    android:textColor="@color/black"
                    android:textSize="14sp" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <LinearLayout
                    android:id="@+id/border8"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorlightGrey"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="5dp"/>

                <include
                    android:id="@+id/layout_statistics"
                    layout="@layout/item_poll_statistics" />

                <include
                    android:id="@+id/layout_gender"
                    layout="@layout/item_poll_gender"
                    android:visibility="gone" />


                <include
                    android:id="@+id/layout_word_cloud"
                    layout="@layout/item_poll_word_cloud"
                    android:visibility="gone" />

                <include
                    android:id="@+id/layout_age"
                    layout="@layout/item_poll_age"
                    android:visibility="gone" />


                <include
                    android:id="@+id/layout_location"
                    layout="@layout/item_poll_location"
                    android:visibility="gone" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</layout>